fix latex code too large

--- a/res/org.css
+++ b/res/org.css
@@ -22,10 +22,6 @@
   --bg-color:    #f1f1f1;
 }
 
-mrow.MJX-TeXAtom-ORD{
-  padding-left:2em!important;
-}
-
 *{
   text-align:justify;
   color: var(--fg-color);
@@ -87,10 +83,13 @@ code:before, code:after {content: "=";
 pre.src,p.verse,blockquote,pre.example,div.org-center p
 {padding-left:0.2em!important;}
 
+div.MathJax_Display{overflow:auto!important;}
+
 pre {color: var(--fg-color);
      border:none!important;
      padding:0!important;
      margin:0!important;
+     overflow:auto!important;
      background-color: var(--bg-color);}
 
 table, pre, p {margin-top:0.5em!important;}
